--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-tabindex": "^1.0.3",
     "sass": "^1.58.0",
     "web-vitals": "^2.1.4"
   },
