--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@wordpress/block-editor": "^11.4.0",
     "axios": "^1.3.3",
     "jquery": "^3.6.3",
     "react": "^18.2.0",
@@ -13,6 +14,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-smart-slider": "^0.1.2",
     "react-tabindex": "^1.0.3",
     "sass": "^1.58.0",
     "web-vitals": "^2.1.4"
